Слайдер превью галереи в карточке товара

--- a/product.html
+++ b/product.html
@@ -218,22 +218,58 @@
         </div>
         <div class="product__gallery">
           <div class="product__gallery__preview">
-            <span class="product__gallery__preview__up"></span>
-            <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
-            <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
-            <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
-            <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
-            <img class="product__gallery__preview__image" src="../images/demo/product/product-priview.jpg" />
-            <span class="product__gallery__preview__down"></span>
+            <ul class="product__gallery__preview__list">
+              <li class="product__gallery__preview__list__item">
+                <img class="product__gallery__preview__list__item__image product__gallery__preview__list__item__image--active" data-preview="1" src="../images/demo/product/product-priview.jpg" />
+              </li>
+              <li class="product__gallery__preview__list__item">
+                <img class="product__gallery__preview__list__item__image" data-preview="2" src="../images/demo/product/ipad.jpg" />
+              </li>
+              <li class="product__gallery__preview__list__item">
+                <img class="product__gallery__preview__list__item__image" data-preview="3" src="../images/demo/product/watch.jpg" />
+              </li>
+              <li class="product__gallery__preview__list__item">
+                <img class="product__gallery__preview__list__item__image" data-preview="4" src="../images/demo/product/belkin.jpg" />
+              </li>
+              <li class="product__gallery__preview__list__item">
+                <img class="product__gallery__preview__list__item__image" data-preview="5" src="../images/demo/product/airpods.jpg" />
+              </li>
+              <li class="product__gallery__preview__list__item">
+                <img class="product__gallery__preview__list__item__image" data-preview="6" src="../images/demo/product/airtag.jpg" />
+              </li>
+            </ul>
+            <div class="product__gallery__preview__arrows">
+              <span class="product__gallery__preview__arrows__up"></span>
+              <span class="product__gallery__preview__arrows__down"></span>
+            </div>
           </div>
-          <img class="product__gallery__image" src="../images/demo/product/product-main.jpg" />
-          <div class="product__gallery__dots hvr__dots">
+          <ul class="product__gallery__big">
+            <li class="product__gallery__big__item product__gallery__big__item--active" data-image="1">
+              <img class="product__gallery__big__item__image" src="../images/demo/product/product-main.jpg" />
+            </li>
+            <li class="product__gallery__big__item" data-image="2">
+              <img class="product__gallery__big__item__image" src="../images/demo/product/ipad.jpg" />
+            </li>
+            <li class="product__gallery__big__item" data-image="3">
+              <img class="product__gallery__big__item__image" src="../images/demo/product/watch.jpg" />
+            </li>
+            <li class="product__gallery__big__item" data-image="4">
+              <img class="product__gallery__big__item__image" src="../images/demo/product/belkin.jpg" />
+            </li>
+            <li class="product__gallery__big__item" data-image="5">
+              <img class="product__gallery__big__item__image" src="../images/demo/product/airpods.jpg" />
+            </li>
+            <li class="product__gallery__big__item" data-image="6">
+              <img class="product__gallery__big__item__image" src="../images/demo/product/airtag.jpg" />
+            </li>
+          </ul>
+          <!-- <div class="product__gallery__dots hvr__dots">
             <span class="product__gallery__dots__item hvr__dot hvr__dot--active"></span>
             <span class="product__gallery__dots__item hvr__dot"></span>
             <span class="product__gallery__dots__item hvr__dot"></span>
             <span class="product__gallery__dots__item hvr__dot"></span>
             <span class="product__gallery__dots__item hvr__dot"></span>
-          </div>
+          </div> -->
         </div>
         <div class="product__options">
           <div class="product__options__option">
